--- a/todo.html
+++ b/todo.html
@@ -4,94 +4,151 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"> -->
-
-    <link rel="stylesheet" href="/all.min.css">
-    <link rel="stylesheet" href="/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <style>
-        @media (max-width: 1025px) {
-            /* Styles for screens up to 1025px */
-            .container {
-                max-width: 90%;
-            }
-            .navbar {
-                padding: 1rem;
-            }
-            #taskInput {
-                font-size: 1.1rem;
-            }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f8f9fa;
+            margin: 0;
+            padding: 0;
+        }
+
+        .navbar {
+            background-color: #007bff;
+            color: white;
+            padding: 15px;
+            text-align: center;
+            font-size: 1.5rem;
+            font-weight: bold;
+        }
+
+        .badge {
+            background-color: red;
+            color: white;
+            padding: 5px 10px;
+            border-radius: 10px;
+            font-size: 0.9rem;
+            margin-left: 10px;
+        }
+
+        .container {
+            max-width: 600px;
+            margin: 20px auto;
+            background: white;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+        }
+
+        .input-group {
+            display: flex;
+            gap: 10px;
+        }
+
+        #taskInput {
+            flex: 1;
+            padding: 10px;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+
+        .btn {
+            background-color: #007bff;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        .btn:hover {
+            background-color: #0056b3;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+            margin-top: 10px;
+        }
+
+        .list-group-item {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px;
+        border: 1px solid #ddd;
+        margin-bottom: 5px;
+        border-radius: 5px;
+        }
+
+        .item-content {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .check-icon {
+            color: blue;
+            cursor: pointer;
+        }
+
+        .edit-icon {
+            color: orange;
+            cursor: pointer;
+            margin-right: 13px;
+        }
+
+        .delete-icon {
+            color: red;
+            cursor: pointer;
+        }
+
+
+        .fa-check {
+            color: green;
+            cursor: pointer;
+        }
+
+        .fa-trash {
+            color: red;
+            cursor: pointer;
+        }
+
+        .fa-pen {
+            color: orange;
+            cursor: pointer;
+        }
+
+        #done {
+            opacity: 0.5;
         }
 
         @media (max-width: 768px) {
-            /* Styles for small phones */
             .container {
                 max-width: 85%;
-            }
-            .navbar {
-                padding: 0.8rem;
-            }
-            #taskInput {
-                font-size: 1rem;
-            }
-            .badge {
-                font-size: 0.8rem;
-            }
-            #todo, #done {
-                font-size: 0.9rem;
             }
         }
 
         @media (max-width: 468px) {
-            /* Styles for small phones */
             .container {
-                max-width: 80%;
-            }
-            .navbar {
-                padding: 0.7rem;
-            }
-            #taskInput {
-                font-size: 0.9rem;
-            }
-            .badge {
-                font-size: 0.7rem;
-            }
-        }
-
-        @media (max-width: 320px) {
-            /* Styles for very small screens */
-            .container {
-                max-width: 75%;
-            }
-            .navbar {
-                padding: 0.6rem;
-            }
-            #taskInput {
-                font-size: 0.8rem;
-            }
-            .badge {
-                font-size: 0.6rem;
+                max-width: 90%;
             }
         }
     </style>
 </head>
 <body>
-    <nav class="navbar bg-primary navbar-dark">
-      <div class="container" style="max-width: 600px;">
-        <a href="#" class="navbar-brand"> TodoList
-            <span class="badge bg-danger ms-2">0</span>
-        </a>
-      </div>
+    <nav class="navbar">
+        Todo List <span class="badge">0</span>
     </nav>
 
-    <div class="container" style="max-width: 600px">
-        <div class="input-group my-4">
-            <input type="text" class="form-control" id="taskInput">
-            <button class="btn btn-primary" id="addTask">Add</button>
+    <div class="container">
+        <div class="input-group">
+            <input type="text" id="taskInput" placeholder="Enter task">
+            <button class="btn" id="addTask">Add</button>
         </div>
-        <ul id="todo" class="list-group"></ul>
-        <ul id="done" class="list-group mt-4 opacity-50"></ul>
+        <ul id="todo"></ul>
+        <ul id="done"></ul>
     </div>
 
     <script>
@@ -129,34 +186,47 @@
         function createItem(text, done = false) {
             let li = document.createElement("li");
             li.classList.add("list-group-item");
-            li.textContent = text;
+
+            let itemContent = document.createElement("div");
+            itemContent.classList.add("item-content");
 
             let check = document.createElement("a");
             check.href = "#";
-            check.classList.add("fa-solid", "fa-check", "float-start", "me-3");
+            check.classList.add("fa-solid", "fa-check", "check-icon");
             check.onclick = () => {
                 document.querySelector("#done").appendChild(li);
                 check.remove();
                 updateTaskStatus(text, true);
                 updateCount();
-            };
-            if (!done) li.appendChild(check);
+        };
+
+        if (!done) itemContent.appendChild(check);
+
+            let taskText = document.createElement("span");
+            taskText.textContent = text;
+            itemContent.appendChild(taskText);
+
+            li.appendChild(itemContent);
+
+            let iconContainer = document.createElement("div");
+
+            let edit = document.createElement("a");
+            edit.href = "#";
+            edit.classList.add("fa-solid", "fa-pen", "edit-icon");
+            edit.onclick = () => editTask(li, text);
+            iconContainer.appendChild(edit);
 
             let del = document.createElement("a");
             del.href = "#";
-            del.classList.add("fa-solid", "fa-trash", "text-danger", "float-end");
+            del.classList.add("fa-solid", "fa-trash", "delete-icon");
             del.onclick = () => {
                 li.remove();
                 removeTask(text);
                 updateCount();
-            };
-            li.appendChild(del);
+        };
+            iconContainer.appendChild(del);
 
-            let edit = document.createElement("a");
-            edit.href = "#";
-            edit.classList.add("fa-solid", "fa-pen", "text-warning", "float-end", "me-3");
-            edit.onclick = () => editTask(li, text);
-            li.appendChild(edit);
+            li.appendChild(iconContainer);
 
             if (done) {
                 document.querySelector("#done").appendChild(li);
@@ -164,6 +234,7 @@
                 document.querySelector("#todo").appendChild(li);
             }
         }
+
 
         function updateTaskStatus(text, done) {
             let data = getData().map(item => item.text === text ? { text, done } : item);
